# maubot-autoreply

./: .gitignore  README.md  base-config.yaml  maubot.yaml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
autoreply/: __init__.py  _config.py  _store.py
scripts-dev/: lint.sh
